# mobile-robot-planning

./: setup_rl_env.sh
devel/: .catkin  local_setup.fish
devel/lib/mr_traditional_planner/: astar_planner_cpp  bcd_planner_cpp  dijkstra_planner_cpp  stc_planner_cpp
devel/lib/pkgconfig/: mr_description.pc  mr_gazebo.pc  mr_maps.pc  mr_msgs.pc  mr_navigation.pc  mr_traditional_planner.pc
devel/share/mr_description/cmake/: mr_descriptionConfig.cmake
devel/share/mr_gazebo/cmake/: mr_gazeboConfig.cmake
devel/share/mr_maps/cmake/: mr_mapsConfig.cmake
devel/share/mr_msgs/cmake/: mr_msgsConfig.cmake
devel/share/mr_navigation/cmake/: mr_navigationConfig.cmake
devel/share/mr_traditional_planner/cmake/: mr_traditional_plannerConfig.cmake
refer/mobile-robot-planning-main/: .gitignore  install_env.sh
refer/mobile-robot-planning-main/src/my_navigation/: CMakeLists.txt
refer/mobile-robot-planning-main/src/my_path_planner/: package.xml  plugin.xml
refer/mobile-robot-planning-main/src/my_robot_description/: CMakeLists.txt
src/husky_description/urdf/: decorations.urdf.xacro  husky.urdf.xacro  pacs.urdf.xacro  wheel.urdf.xacro
src/husky_description/urdf/accessories/: hokuyo_ust10.urdf.xacro  sensor_arch.urdf.xacro  sick_lms1xx_mount.urdf.xacro
src/mobot_bringup/: CMakeLists.txt  package.xml
src/mobot_bringup/config/: robot_config.yaml
src/mobot_bringup/launch/: sim_core.launch
src/mobot_bringup/scripts/: fake_localization.py  set_init_pose.py  spawn_robot_from_params.py
src/mobot_description/: CMakeLists.txt  package.xml
src/mobot_gazebo/: CMakeLists.txt  package.xml
src/mobot_learning/: CMakeLists.txt  package.xml
src/mobot_learning/launch/: rl_agent.launch
src/mobot_maps/: CMakeLists.txt  package.xml
src/mobot_maps/config/: initial_poses.yaml
src/mobot_msgs/: CMakeLists.txt  package.xml
src/mobot_msgs/action/: GlobalPlan.action
src/mobot_msgs/msg/: RLReward.msg  RLState.msg
src/mobot_msgs/srv/: SwitchPlanner.srv
src/mobot_navigation/: CMakeLists.txt  package.xml
src/mobot_navigation/config/: costmap_common_params_burger.yaml  move_base_params.yaml
src/mobot_navigation/launch/: move_base.launch  turtlebot3_house_navigation.launch  turtlebot3_world_navigation.launch
src/mobot_traditional_planner/: CMakeLists.txt  package.xml  plugin.xml
src/mobot_traditional_planner/src/bsa_spiral/: common.cpp  full_coverage_path_planner.cpp
src/mobot_worlds/: CMakeLists.txt  package.xml
src/mr_description/: CMakeLists.txt
src/mr_description/urdf/: turtlebot3_burger.urdf.xacro
src/mr_gazebo/: CMakeLists.txt
src/mr_gazebo/launch/: spawn_navigation_world.launch  spawn_robot.launch
src/mr_maps/: CMakeLists.txt  package.xml
src/mr_maps/launch/: map_loader.launch
src/mr_maps/maps/: turtlebot3_world.yaml
src/mr_msgs/: CMakeLists.txt  package.xml
src/mr_msgs/msg/: README.md
src/mr_navigation/: CMakeLists.txt
src/mr_navigation/config/: costmap_common_params_burger.yaml  dwa_local_planner_params_burger.yaml  global_costmap_params.yaml  local_costmap_params.yaml  move_base_params.yaml
src/mr_navigation/launch/: amcl.launch  move_base.launch  navigation.launch  navigation_sim.launch
src/mr_navigation/rviz/: navigation.rviz
src/mr_traditional_planner/: CMakeLists.txt  DEBUG_NOTE.md  README.md  package.xml
src/mr_traditional_planner/include/mr_traditional_planner/coverage/: bcd_planner.h  stc_planner.h
src/mr_traditional_planner/include/mr_traditional_planner/optimal/: astar_planner.h  dijkstra_planner.h
src/mr_traditional_planner/launch/: astar_cpp.launch  astar_py.launch  bcd_cpp.launch  bcd_py.launch  dijkstra_cpp.launch  dijkstra_py.launch  planner.launch  planner_sim.launch  stc_cpp.launch  stc_py.launch
src/mr_traditional_planner/scripts/coverage/: stc_planner_py.py
src/mr_traditional_planner/scripts/optimal/: dijkstra_planner_py.py
src/mr_traditional_planner/scripts/utils/: __init__.py  math_utils.py
src/mr_traditional_planner/src/coverage/: bcd_planner_node.cpp  stc_planner_node.cpp
src/mr_traditional_planner/src/optimal/: astar_planner_node.cpp  dijkstra_planner_node.cpp
src/my_maps/: CMakeLists.txt  package.xml
src/my_navigation/: package.xml
src/my_navigation/config/: costmap_common_params_burger.yaml  move_base_params.yaml  teb_local_planner_params.yaml
src/my_navigation/launch/: turtlebot3_house_navigation.launch  turtlebot3_world_navigation.launch
src/my_navigation/rviz/: my_nav.rviz
src/my_path_planner/: CMakeLists.txt  plugin.xml
src/my_path_planner/src/bcd_planner/: bcd_planner.cpp
src/my_path_planner/src/stc_planner/: stc_planner.cpp
src/my_robot_description/: package.xml
src/my_worlds/: package.xml
tools/: list_requirements.sh
(+11 files in other folders)
