<?xml version="1.0"?>
<package format="2">
  <name>mobot_msgs</name>
  <version>0.0.1</version>
  <description>Custom messages, actions and services for Mobot planning stack</description>
  <license>Apache 2.0</license>

  <maintainer email="lmy@todo.todo">lmy</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <build_depend>std_msgs</build_depend>
  <exec_depend>std_msgs</exec_depend>

  <build_depend>geometry_msgs</build_depend>
  <exec_depend>geometry_msgs</exec_depend>

  <build_depend>nav_msgs</build_depend>
  <exec_depend>nav_msgs</exec_depend>

  <build_depend>actionlib_msgs</build_depend>
  <exec_depend>actionlib_msgs</exec_depend>

  <export/>
</package>

