<?xml version="1.0"?>
<package format="2">
  <name>mr_maps</name>
  <version>0.1.0</version>
  <description>Map assets for the mobile-robot-benchmark navigation layer.</description>

  <maintainer email="lmy@example.com">lmy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>map_server</exec_depend>

  <export/>
</package>
