<?xml version="1.0"?>
<package format="2">
  <name>mr_msgs</name>
  <version>0.1.0</version>
  <description>Shared protocol package reserved for benchmark-wide ROS interfaces.</description>

  <maintainer email="lmy@example.com">lmy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <export/>
</package>
