<?xml version="1.0"?>
<package format="2">
  <name>mr_traditional_planner</name>
  <version>0.1.0</version>
  <description>Bilingual skeleton for traditional optimal-path and coverage planners.</description>

  <maintainer email="lmy@example.com">lmy</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>actionlib</depend>
  <depend>actionlib_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>move_base_msgs</depend>
  <depend>nav_msgs</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>tf</depend>

  <export/>
</package>
